--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -6,3 +6,6 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/gdt.o \
+$(ARCHDIR)/gdt_flush.o \
+$(ARCHDIR)/tss.o \
